added category for rooms and users and added realtime connected users in room woooooo

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -46,7 +46,13 @@
         </a>
       </li><!-- End Profile Page Nav -->
 
-      
+      <li class="nav-item">
+        <a class="nav-link collapsed btn" [routerLink]="['/categories']">
+          <i class="fa fa-user"></i>
+          <span>manage Categories</span>
+        </a>
+      </li>
+
       <li class="nav-item">
         <a class="nav-link collapsed btn" data-bs-toggle="modal" data-bs-target="#roomModal">
           
