--- a/src/app/core/pages/messaging/create-room/create-room.component.html
+++ b/src/app/core/pages/messaging/create-room/create-room.component.html
@@ -16,6 +16,10 @@
             <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="description">
             <label >Description</label>
           </div>
+          <div class="form-floating mb-3">
+            <input required  type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="category">
+            <label >category</label>
+          </div>
           <button (click)="createRoom(roomform)" data-bs-dismiss="modal" class="w-100 mb-2 btn btn-lg rounded-4 btn-primary"  type="submit">Create New Room</button>
         </form>
       </div>
