--- a/src/app/core/pages/messaging/room/room.component.html
+++ b/src/app/core/pages/messaging/room/room.component.html
@@ -26,6 +26,17 @@
             </div>
           </div>
         </a>
+
+        <a href="" class="list-group-item list-group-item-action border-0" *ngFor="let user of (connectedUsers$ |async)">
+          <!--<div class="badge bg-success float-right">5</div>-->
+          <div class="d-flex align-items-start">
+            <img src="http://localhost:3000/auth/image/{{user.image}}" class="rounded-circle mr-1" alt="" width="40" height="40">
+            <div class="flex-grow-1 ml-3">
+              {{user.username}}
+              <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
+            </div>
+          </div>
+        </a>
         
         <hr class="d-block d-lg-none mt-1 mb-0">
 
