--- a/src/app/core/components/sign-up/sign-up.component.html
+++ b/src/app/core/components/sign-up/sign-up.component.html
@@ -32,6 +32,13 @@
           <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" class="form-control" id="inputemail" placeholder="gg@mail.com" ngModel name="email" #email="ngModel">
           <div class="alert alert-danger" *ngIf="email.invalid && email.dirty">email must be of form "cc@aaa.tt"</div>
         </div>
+        <div class="col-md-3">
+            <label for="inputCity" class="form-label">Sex</label>
+            <select class="form-select" id="inputGroupSelect01" ngModel name="sex" #sex="ngModel">
+              <option value="M">Male</option>
+              <option value="F">female</option>
+            </select>
+          </div>
 
 
         <div class="col-md-6">
