message time+default user image

--- a/src/app/core/components/profile-nav/profile-nav.component.html
+++ b/src/app/core/components/profile-nav/profile-nav.component.html
@@ -1,7 +1,8 @@
 <li class="nav-item dropdown pe-3">
 
   <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-    <img src="http://localhost:3000/auth/image/{{user.image}}" alt="Profile" class="rounded-circle">
+    <img *ngIf="user.image else elseblock" src="http://localhost:3000/auth/image/{{user.image}}" alt="Profile" class="rounded-circle">
+    <ng-template #elseblock><i class="fa-solid fa-user"></i></ng-template>
     <span class="d-none d-md-block dropdown-toggle ps-2">{{user.username}}</span>
   </a><!-- End Profile Iamge Icon -->
 
