--- a/src/app/core/pages/messaging/message/message.component.html
+++ b/src/app/core/pages/messaging/message/message.component.html
@@ -3,7 +3,7 @@
 <div class="mb-4"[ngClass]="{ownmessage: message.user?.username === user.username , leftmsg:message.user?.username !== user.username}">
   <div>
     <img src="http://localhost:3000/auth/image/{{message.user?.image}}" class="rounded-circle mr-1" alt="" width="40" height="40">
-    <div class="text-muted small text-nowrap mt-2">time</div>
+    <div class="text-muted small text-nowrap mt-2">{{showdate(message.created_at) }}</div>
   </div>
   <div class="flex-shrink-1 rounded py-2 px-3 mr-3" [ngClass]="{blue: message.user?.username === user.username,grey:message.user?.username !== user.username}">
     <div class="font-weight-bold mb-1">{{message.user?.username}}</div>
