--- a/src/app/core/pages/profil/profil.component.html
+++ b/src/app/core/pages/profil/profil.component.html
@@ -21,7 +21,8 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-              <img src="http://localhost:3000/auth/image/{{user.image}}" alt="Profile" class="rounded-circle">
+              <img *ngIf="user.image else elseblock"  src="http://localhost:3000/auth/image/{{user.image}}" class="rounded-circle">
+              <ng-template #elseblock><i class="fa-solid fa-user fa-2xl"></i></ng-template>
               <h2>{{user.username}}</h2>
               <h3>{{user.email}}</h3>
               <div class="social-links mt-2">
