confirm password fix

--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -7,10 +7,10 @@
   
     <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
       <h1 class="display-4 fw-bold lh-1">
-        Test hero section with cropped image and shadows
+        Welcome to Rooms 
       </h1>
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id pariatur maiores ratione ullam dicta atque quae nihil suscipit ipsam repudiandae quia eius voluptates nesciunt libero debitis, nostrum, cupiditate consequatur iure?
+        the best place for topical conversations and making new connections.So create an account and get the conversation started
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
         <a class="btn btn-primary btn-lg" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create an Account</a>
