--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
       </li><!-- End Dashboard Nav -->
       
       
-
+<!--
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="fa-solid fa-chevron-down ms-auto"></i>
@@ -33,11 +33,11 @@
             </a>
           </li>
         </ul>
-      </li><!-- End Tables Nav -->
+      </li> End Tables Nav -->
 
 
       
-      <li class="nav-heading">test heading</li>
+      <li class="nav-heading">Navigation</li>
 
       <li class="nav-item">
         <a class="nav-link " [routerLink]="['profil']">
