--- a/src/app/core/components/profile-nav/profile-nav.component.html
+++ b/src/app/core/components/profile-nav/profile-nav.component.html
@@ -16,7 +16,7 @@
     </li>
 
     <li>
-      <a class="dropdown-item d-flex align-items-center" [routerLink]="['profil']" routerLinkActive="active">
+      <a class="dropdown-item d-flex align-items-center" [routerLink]="['profil']">
         <i class="fa-solid fa-user"></i>
         <span>My Profile</span>
       </a>
@@ -26,7 +26,7 @@
     </li>
 
     <li>
-      <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+      <a class="dropdown-item d-flex align-items-center" [routerLink]="['profil']">
         <i class="fa-solid fa-wrench"></i>
         <span>Account Settings</span>
       </a>
