--- a/src/app/core/components/carousel/carousel.component.html
+++ b/src/app/core/components/carousel/carousel.component.html
@@ -3,11 +3,11 @@
 <div class="container p-5">
 <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-      <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      <h2 class="featurette-heading">Group discusion. <span class="text-muted">over your intrests.</span></h2>
+      <p class="lead">Join a group chat that matches your favourite subjects and engage in a captivating conversation with people that share ypur intrests where you get the chance to share your thought and know each other for the next part of our process</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/swipe2.svg" width="500" height="500" >
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat2.svg" width="500" height="500" >
     
     </div>
   </div>
@@ -15,12 +15,12 @@
 <div class="container p-5">
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat2.svg" width="500" height="500" >
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/rank.svg" width="500" height="500" >
     
     </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading">Rank <span class="text-muted">the group members</span></h2>
+        <p class="lead">As your having the conversations you'll certainly develop a better rapport with some more than others. So all you need to do is rank the other members in your group based on your prefrences </p>
       </div>
       
     </div>
@@ -28,8 +28,8 @@
   <div class="container p-5">
     <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+          <h2 class="featurette-heading">One on One <span class="text-muted">Conversation</span></h2>
+          <p class="lead">After all rankings are submited our algorithme will match you with your best possible option and create a private room for you where you can keep your conversation going</p>
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/chatting2.svg" width="500" height="500" >
