--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -10,7 +10,7 @@
         Welcome to Rooms 
       </h1>
       <p class="lead">
-        the best place for topical conversations and making new connections.So create an account and get the conversation started
+        the best place for topical conversations and making new connections.So create an account and get the conversation started!!
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
         <a class="btn btn-primary btn-lg" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create an Account</a>
