--- a/src/app/core/components/testimonials/testimonials.component.html
+++ b/src/app/core/components/testimonials/testimonials.component.html
@@ -4,24 +4,24 @@
     <div class="row">
         <div class="col-lg-4 p-5 ">
                   <img src="../../../../assets/images/person1.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
-                  <h2>chkoun hetha</h2>
+                  <h2>Marie</h2>
                   <div class="caption">
-                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i> it's my favourite place to discuss whatever is on my mind <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
              
         </div>
         <div class="col-lg-4 p-5">
             <img src="../../../../assets/images/person5.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
-                  <h2>chkoun hetha</h2>
+                  <h2>Raskolnikov</h2>
                   <div class="caption">
-                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color"></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color"></i> The best part of it , is waiting for matching result ...  <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
         </div>
         <div class="col-lg-4 p-5">
             <img src="../../../../assets/images/person4.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
-                  <h2>chkoun hetha</h2>
+                  <h2>Samir</h2>
                   <div class="caption">
-                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i>it helped me get into a new relationship and work on my communication <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
         </div>
     </div>
