--- a/src/app/core/components/explore-card/explore-card.component.html
+++ b/src/app/core/components/explore-card/explore-card.component.html
@@ -1,9 +1,9 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://img.mobiscroll.com/demos/gridlayout/toucan.jpg" alt="Card image cap">
+  <!-- <img class="card-img-top" src="https://img.mobiscroll.com/demos/gridlayout/toucan.jpg" alt="Card image cap"> -->
   <div class="card-body">
     <h2 class="card-title">{{name}}</h2>
     <p class="card-text">{{description}}</p>
     <a  (click)="joinRoom()" class="btn btn-primary m-1">join</a>
-    <a [routerLink]="['/choice']" class="btn btn-primary m-1">Rank</a>
+    <!-- <a [routerLink]="['/choice']" class="btn btn-primary m-1">Rank</a> -->
   </div>
 </div>
