--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -42,7 +42,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed btn" routerLinkActive="btn-primary"  [routerLinkActiveOptions]="{exact:
           true}" [routerLink]="['/explore']">
-          <i class="fa fa-user"></i>
+          <i class="fa fa-home"></i>
           <span>explore</span>
         </a>
       </li>
@@ -50,7 +50,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed btn" routerLinkActive="btn-primary"  [routerLinkActiveOptions]="{exact:
           true}" [routerLink]="['/explore/myrooms']">
-          <i class="fa fa-user"></i>
+          <i class="fa fa-home"></i>
           <span>my rooms</span>
         </a>
       </li>
@@ -66,7 +66,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed btn" routerLinkActive="btn-primary"  [routerLinkActiveOptions]="{exact:
           true}" [routerLink]="['/categories']">
-          <i class="fa fa-user"></i>
+          <i class="fa fa-object-group"></i>
           <span>manage Categories</span>
         </a>
       </li>
