--- a/src/app/core/components/sign-up/sign-up.component.html
+++ b/src/app/core/components/sign-up/sign-up.component.html
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-3">
             <label for="inputCity" class="form-label">Sex</label>
-            <select class="form-select" id="inputGroupSelect01" ngModel name="sex" #sex="ngModel">
+            <select class="form-select" id="inputGroupSelect01" ngModel name="sexe" #sexe="ngModel">
               <option value="M">Male</option>
               <option value="F">female</option>
             </select>
