--- a/src/app/core/pages/choice/choice.component.html
+++ b/src/app/core/pages/choice/choice.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="d-grid gap-2 d-md-flex justify-content-center" style="padding:50px">
-  <a class="btn btn-info" (click)="sendToServer()"> Yeah! this is my final choice </a>
+  <a class="btn btn-info" data-bs-dismiss="modal" (click)="sendToServer()"> Yeah! this is my final choice </a>
 </div>
 
 
