--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -82,8 +82,8 @@
 
       <li class="nav-item">
         <a class="nav-link collapsed" [routerLink]="['/faq']">
-          <i class="bi bi-question-circle"></i>
-          <span>F.A.Q</span>
+          
+          <span><i class="fa-solid fa-question"> </i> F.A.Q</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
