--- a/src/app/core/pages/messaging/room/room.component.html
+++ b/src/app/core/pages/messaging/room/room.component.html
@@ -6,7 +6,12 @@
   <app-match-modal [connectedUsers]="(connectedUsers$ |async)"  [room] = "chatRoom"></app-match-modal>
   <div class="container p-0">
 
-
+    <nav class="m-3">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a [routerLink]="['/explore']" routerLinkActive="active">dashboard</a></li>
+        <li class="breadcrumb-item active">Room</li>
+      </ol>
+    </nav>
   <div class="card">
     <div class="row g-0">
       <div class="col-12 col-lg-5 col-xl-3 border-right">
@@ -35,7 +40,8 @@
         <a href="" class="list-group-item list-group-item-action border-0" *ngFor="let user of (connectedUsers$ |async)">
           <!--<div class="badge bg-success float-right">5</div>-->
           <div class="d-flex align-items-start">
-            <img src="http://localhost:3000/auth/image/{{user.image}}" class="rounded-circle mr-1" alt="" width="40" height="40">
+            <img *ngIf="user.image else elseblock" src="http://localhost:3000/auth/image/{{user.image}}" class="rounded-circle mr-1" alt="" width="40" height="40">
+            <ng-template #elseblock><i class="fa-solid fa-user  blue"></i></ng-template>
             <div class="flex-grow-1 ml-3">
               {{user.username}}
               <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
@@ -53,6 +59,8 @@
             <div class="position-relative">
             </div>
             <div class="flex-grow-1 pl-3">
+              <img *ngIf="chatRoom.image else elseblock1" src="http://localhost:3000/auth/image/{{chatRoom.image}}" class="rounded-circle mr-1" alt="" width="40" height="40">
+              <ng-template #elseblock1><i class="fa-solid fa-comments  blue"></i></ng-template>
               <strong>{{chatRoom.name}}</strong>
               
             </div>
@@ -108,7 +116,7 @@
   <form (ngSubmit)="sendMessage(sendForm)" #sendForm="ngForm">
     <div class="chat-send row">
       <div class="col-2">
-        <input type="text" class="form-control" name="user" id="input-user" ngModel>
+        <input type="text" class="form-control" name="chatRoom" id="input-user" ngModel>
       </div>
       <div class="col-8">
         <input type="text" class="form-control" name="message" id="input-message" ngModel>
