--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed btn" routerLinkActive="btn-primary"  [routerLinkActiveOptions]="{exact:
           true}" [routerLink]="['/explore/myrooms']">
-          <i class="fa fa-home"></i>
+          <i class="fa fa-list"></i>
           <span>my rooms</span>
         </a>
       </li>
