--- a/src/app/core/pages/messaging/room/room.component.html
+++ b/src/app/core/pages/messaging/room/room.component.html
@@ -1,10 +1,27 @@
+<!-- 
+<app-header ></app-header> -->
+<div *ngIf="notifActive" class="modal modal-sheet front position-absolut d-block py-5" tabindex="-1" role="dialog" id="modalSheet">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header border-bottom-0">
+        <h5 class="modal-title">Hey you have a match !</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeNotif()"></button>
+      </div>
+      <div class="modal-body py-0">
+        <p> {{notifMsg}} </p>
+      </div>
+      <div class="modal-footer flex-column border-top-0">
+        <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2" (click)="closeNotif()">ok</button>
+        <!-- <button type="button" class="btn btn-lg btn-light w-100 mx-0" data-bs-dismiss="modal" (click)="closeNotif()">Close</button> -->
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--<app-header ></app-header> -->
-
-<main class="content">
+<main class="content" >
   
   <app-match-modal [connectedUsers]="(connectedUsers$ |async)"  [room] = "chatRoom"></app-match-modal>
-  <div class="container p-0">
+  <div class="container pt-5">
 
     <nav class="m-3">
       <ol class="breadcrumb">
